<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    android:paddingTop="@dimen/espacio"
    android:id="@+id/mRlView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15sp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text=""
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />


            <ImageView
                android:id="@+id/camara1"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/perfilfoto"
                android:onClick="camara1" />

            <TextView
                android:id="@+id/txt_camara1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/fotoU"
                android:textColor="@color/colorBlanco"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imageView2"
                    android:layout_weight="1"
                    android:background="@drawable/trans_border_style"
                    android:alpha="0.6"
                    android:hint="@string/nombreU"
                    android:inputType="textAutoCorrect"
                    android:padding="5sp"
                    android:text=""
                    android:textColor="@color/colorNegro"
                    android:textSize="17sp"
                    android:textStyle="bold"></EditText>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10sp" />

                <EditText
                    android:id="@+id/txt_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:background="@drawable/trans_border_style"
                    android:alpha="0.6"
                    android:hint="@string/apellidoU"
                    android:inputType="textAutoCorrect"
                    android:padding="5sp"
                    android:text=""
                    android:textColor="@color/colorNegro"
                    android:textSize="17sp"
                    android:textStyle="bold"></EditText>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10sp" />

                <EditText
                    android:id="@+id/txt_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imageView2"
                    android:layout_weight="1"
                    android:background="@drawable/trans_border_style"
                    android:alpha="0.6"
                    android:hint="@string/celularU"
                    android:inputType="phone"
                    android:padding="5sp"
                    android:text=""
                    android:textColor="@color/colorNegro"
                    android:textSize="17sp"
                    android:textStyle="bold"></EditText>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10sp" />

                <EditText
                    android:id="@+id/txt_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imageView2"
                    android:layout_weight="1"
                    android:background="@drawable/trans_border_style"
                    android:alpha="0.6"
                    android:hint="@string/correoU"
                    android:inputType="textEmailAddress"
                    android:padding="5sp"
                    android:text=""
                    android:textColor="@color/colorNegro"
                    android:textSize="17sp"
                    android:textStyle="bold"></EditText>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10sp" />

                <EditText
                    android:id="@+id/txt_passwor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imageView2"
                    android:layout_weight="1"
                    android:background="@drawable/trans_border_style"
                    android:alpha="0.6"
                    android:hint="@string/passwordU"
                    android:inputType="textPassword"
                    android:padding="5sp"
                    android:text=""
                    android:textColor="@color/colorNegro"
                    android:textSize="17sp"
                    android:textStyle="bold"></EditText>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/blanco_post_border_style"
                    android:onClick="validar"
                    android:text="@string/registrarse"
                    android:textColor="@color/colorFondo"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlanco"
        android:background="@color/colorTransparente"
        android:text="@string/notienecuenta"
        android:gravity="center"
        android:textSize="12sp"
        android:inputType="textCapCharacters"
        android:onClick="terminos"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>