<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomedium"
        android:text="Agregar Tarjeta"
        android:textColor="@color/colorPrimary2"
        android:textSize="20sp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="301dp"
        android:layout_height="178dp"
        android:layout_gravity="center"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/colorPrimary2"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="37dp"
                android:background="@drawable/chiptarjeta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/mastercad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/numero_cuenta"
                android:textColor="@color/colorBlanco"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                tools:ignore="MissingConstraints" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginBottom="23dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/banco_text"
                android:textColor="@color/colorBlanco"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/vence_text"
                android:textColor="@color/colorBlanco"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="23dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/fecha"
                android:textColor="@color/colorBlanco"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"/>

    <Button
        android:id="@+id/btntarjeta"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:text="Crear Tarjeta"
        android:textSize="15sp"
        android:background="@drawable/primary2_post_border_style"
        android:textColor="@color/colorBlanco"
        android:layout_gravity="center"
        tools:ignore="InvalidId" />
    
</LinearLayout>