<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mRlView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Perfil"
            android:background="@color/colorFondo"
            android:textColor="@color/colorBlanco"
            android:textSize="20sp" />



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blue_bg">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/camara1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/camara2" />

                <TextView
                    android:id="@+id/txt_camara1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView3"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/fotoU"
                    android:textColor="@color/colorBlanco"
                    android:textSize="16sp" />


            </LinearLayout>


        </FrameLayout>





        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15sp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/blue_border_rounded_cornwe">



                <EditText
                    android:id="@+id/txt_nombre"
                    android:layout_toRightOf="@+id/username_icon"
                    android:hint="Nombre"
                    android:textSize="12sp"
                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <!-- ICON -->
                <ImageView
                    android:id="@+id/username_icon"
                    android:src="@drawable/person"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_marginLeft="17dp"
                    android:layout_centerVertical="true"
                    />


            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5sp" />



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/layut1"
                android:background="@drawable/blue_border_rounded_cornwe">



                <EditText
                    android:id="@+id/txt_apellido"
                    android:layout_toRightOf="@+id/username_icon2"
                    android:hint="Apellido"
                    android:textSize="12sp"
                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <!-- ICON -->
                <ImageView
                    android:id="@+id/username_icon2"
                    android:src="@drawable/person"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_marginLeft="17dp"
                    android:layout_centerVertical="true"
                    />


            </RelativeLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="5sp" />



            <RelativeLayout
                android:id="@+id/layut2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/blue_border_rounded_cornwe">



                <EditText
                    android:id="@+id/txt_celular"
                    android:layout_toRightOf="@+id/username_icon6"
                    android:hint="Celular"
                    android:textSize="12sp"
                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:maxLines="1"
                    android:maxLength="14"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <!-- ICON -->
                <ImageView
                    android:id="@+id/username_icon6"
                    android:src="@drawable/phone"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_marginLeft="17dp"
                    android:layout_centerVertical="true"
                    />


            </RelativeLayout>

            <Space
                android:id="@+id/space1"
                android:layout_width="match_parent"
                android:layout_height="10sp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="5sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/blue_border_rounded_cornwe">



                <EditText
                    android:id="@+id/txt_correo"
                    android:layout_toRightOf="@+id/username_icon3"
                    android:hint="Correo"
                    android:textSize="12sp"
                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:maxLines="1"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <!-- ICON -->
                <ImageView
                    android:id="@+id/username_icon3"
                    android:src="@drawable/email"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_marginLeft="17dp"
                    android:layout_centerVertical="true"
                    />


            </RelativeLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />



            <Button
                android:id="@+id/btnupdate"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/login_button_bk"
                android:onClick="validar"
                android:text="@string/actualizar"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />


            <Button
                android:id="@+id/btncerrar"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/login_button_bk"
                android:text="@string/cerrarSesion"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>